<!--
  ~ Copyright (c) Rene Škuljević in Zagreb 2018
  ~
  ~ All rights reserved.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">DemoMovieApp</string>
    <string name="dot_separator">•</string>

    <string name="start_typing">Start typing…</string>
    <string name="search_movies">Search movies</string>
    <string name="most_popular">Most popular</string>
    <string name="enter_favourite_name">Enter favourite name</string>
    <string name="choose_favourite">Choose favourite</string>
    <string name="save">Save</string>
    <string name="crete_new_favourite">Crete new favourite</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_desc">Internet connection have been lost. Connect to the internet to acces data.</string>
    <string name="try_again">Try again</string>
    <string name="new_list">New list</string>
    <string name="ok">OK</string>
    <string name="get_now_playing">Now playing</string>
    <string name="get_popular">Most popular</string>
    <string name="get_top_rated">Top rated</string>
    <string name="get_upcoming">Upcoming</string>
    <string name="id_caps">ID</string>
    <string name="video_is_not_fetched">Video is not fetched!</string>
    <string name="youtube_base_link">https://www.youtube.com/watch?v=</string>
    <string name="share_via">Share via</string>
    <string name="your_favourites">Your favourites</string>


</resources>
