<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/getNowPlayingRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/getNowPlayingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/get_now_playing"
            android:textColor="@color/ColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/separatorView2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/getNowPlayingRelativeLayout"
        android:background="@color/ColorInactiveGray" />

    <RelativeLayout
        android:id="@+id/getPopularRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorView2">

        <TextView
            android:id="@+id/getPopularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/get_popular"
            android:textColor="@color/ColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <View
        android:id="@+id/separatorView3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/getPopularRelativeLayout"
        android:background="@color/ColorInactiveGray" />

    <RelativeLayout
        android:id="@+id/getTopRatedRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorView3">

        <TextView
            android:id="@+id/getTopRatedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/get_top_rated"
            android:textColor="@color/ColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/separatorView4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/getTopRatedRelativeLayout"
        android:background="@color/ColorInactiveGray" />

    <RelativeLayout
        android:id="@+id/getUpcomingRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorView4">

        <TextView
            android:id="@+id/getUpcomingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/get_upcoming"
            android:textColor="@color/ColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/separatorView5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/getUpcomingRelativeLayout"
        android:background="@color/ColorInactiveGray" />

</RelativeLayout>